--- a/src/vue3/index.html
+++ b/src/vue3/index.html
@@ -4,10 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vue3响应式系统源码结构示例</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            line-height: 1.6;
+        }
+
+        .code-block {
+            background: #f5f5f5;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            overflow-x: auto;
+        }
+
+        .module {
+            border-left: 4px solid #42b983;
+            padding-left: 15px;
+            margin: 10px 0;
+        }
+
+        h2 {
+            color: #35495e;
+        }
+
+        button {
+            padding: 8px 16px;
+            background: #42b983;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        #app {
+            margin-top: 20px;
+            padding: 20px;
+            border: 1px solid #eee;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 
 <body>
+    <h1>手写Vue3响应式系统</h1>
+    <div id="app">
+        <p>计数: <span id="counter">0</span></p>
+        <button class="count-btn">增加</button>
+        <p>消息: <span id="message">Hello</span></p>
+        <button class="msg-btn">修改消息</button>
+    </div>
     <script type="module" src="./index.js"></script>
 </body>
 
