--- a/src/react/index.html
+++ b/src/react/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <script src="./src/demo/index.js"></script>
+    <!-- <script src="./src/demo/index.js"></script> -->
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
